feat: finish base capture module
